documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L71W32API LPVOID __stdcall L71_FileOpenWrite(LPCSTR filename);

L71W32API BOOL __stdcall L71_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

L71W32API BOOL __stdcall L71_FileSeek(LPVOID handle,ULONG offset);

L71W32API ULONG __stdcall L71_FileTell(LPVOID handle);

L71W32API BOOL __stdcall L71_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

L71W32API USHORT __stdcall L71_GetHigh(ULONG val);

L71W32API USHORT __stdcall L71_GetLow(ULONG val);

L71W32API USHORT __stdcall L71_GlobalRdW(USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleClose(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleDel(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleGet(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,HCARD handleval);

L71W32API HCARD __stdcall L71_HandleIns(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L71W32API BOOL __stdcall L71_HandleOkay(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleOpenWin95(LPCSTR cardname,INT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleOpenWinNT(LPCSTR cardname,INT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleVer(HCARD handleval);

L71W32API ERRVAL __stdcall L71_HandleVerPLX(HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAlloc(ULONG wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocAll(LPULONG wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocAllDPM(LPUSHORT wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocDPM(USHORT wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapAllocEx(USHORT configval,ULONG wordcount,HCARD handleval);

L71W32API ULONG __stdcall L71_HeapWipe(HCARD handleval);

L71W32API ULONG __stdcall L71_HeapWipeDPM(HCARD handleval);

L71W32API USHORT __stdcall L71_IndirectRd(INT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_IndirectWr(USHORT value,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_IntClear(HCARD handleval);

L71W32API ERRVAL __stdcall L71_IntConfig(ULONG configval,USHORT count,HCARD handleval);

L71W32API ERRVAL __stdcall L71_IntDisable(HCARD handleval);

L71W32API ERRVAL __stdcall L71_IntEnable(HCARD handleval);

L71W32API ERRVAL __stdcall L71_IntEnableCond(HCARD handleval);

L71W32API LPVOID __stdcall L71_IntGet(HCARD handleval);

L71W32API VOID __stdcall L71_IntReset(HCARD handleval);

L71W32API USHORT __stdcall L71_IORdW(INT addrval,HCARD handleval);

L71W32API USHORT __stdcall L71_IOWINRdW(USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_IOWrW(USHORT value,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernBegin(LPVOID *vxdptr,LPSTR cardstr,LPCSTR cardname,INT busnum,INT devnum,INT funcnum);

L71W32API ERRVAL __stdcall L71_KernDev(LPINT valueptr,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernEnd(LPVOID vxdptr);

L71W32API ERRVAL __stdcall L71_KernIntClear(HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernIntInstall(LPVOID hEvent,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernIntStatus(LPINT valueptr,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernIntUninstall(HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernIORdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernIOWrW(USHORT value,INT addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMFillW(USHORT value,INT addrval,INT countval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMRdL(LPULONG valueptr,INT addrval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMRdsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);