documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L71_FileOpenWrite(ref string filename);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FileRead(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FileSeek(IntPtr handle, UInt32 offset);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_FileTell(IntPtr handle);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FileWrite(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_GetHigh(UInt32 val);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_GetLow(UInt32 val);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_GlobalRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_GlobalRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_GlobalWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_GlobalWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleClose(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleDel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleDel(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleGet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleGet(ref string cardstr, ref Int32 cardnum, ref Int32 devnum, ref UInt32 sizval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleIns@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HandleIns(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleOkay(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleOpen@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleOpen(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleOpenWin95@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleOpenWin95(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleOpenWinNT@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleOpenWinNT(ref string cardname, Int32 cardnum, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleVer@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleVer(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HandleVerPLX@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_HandleVerPLX(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapAlloc(UInt32 wordcount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapAllocAll@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapAllocAll(ref UInt32 wordcount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapAllocAllDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapAllocAllDPM(ref UInt16 wordcount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapAllocDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapAllocDPM(UInt16 wordcount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapAllocEx(UInt16 configval, UInt32 wordcount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapWipe(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_HeapWipeDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_HeapWipeDPM(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IndirectRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_IndirectRd(Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IndirectWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_IndirectWr(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntConfig(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntDisable(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntEnable(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_IntEnableCond(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntGet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L71_IntGet(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IntReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_IntReset(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IORdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_IORdW(Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IOWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_IOWINRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IOWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_IOWINWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_IOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_IOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernBegin@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern Int32 L71_KernBegin(IntPtr* vxdptr, ref string cardstr, ref string cardname, Int32 busnum, Int32 devnum, Int32 funcnum);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernDev@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernDev(ref Int32 valueptr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernEnd(IntPtr vxdptr);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIntClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIntParam@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIntParam(UInt32 clraddr, UInt32 clrwidth, UInt32 clrvalue, UInt32 stataddr, UInt32 statwidth, UInt32 statvalue, UInt32 statmask, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIntStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIntStatus(ref Int32 valueptr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIntUninstall(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIORdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIORdW(ref UInt16 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernIOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernIOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMFillW(UInt16 value, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMRdL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMRdL(ref UInt32 valueptr, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMRdsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMRdsL(ref UInt32 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
